# memory-tools

./: .gitignore  CLAUDE.md  CONTEXT.md  Makefile  README.md  pyproject.toml
.omx/plans/: cross-tool-onboarding.md
docs/: README.md  agent-assets.md  maintenance.md  mcp-client-guide.md  spec.md  status.md  technical-architecture.md  user-guide.md
docs/adr/: 0001-agent-assets-use-grants-not-memory-copies.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: api.ts  main.tsx  styles.css  types.ts
src/memory_workbench/: __init__.py  main.py
src/memory_workbench/api/: deps.py  errors.py  routes.py
src/memory_workbench/domain/: __init__.py  errors.py  models.py  service.py
src/memory_workbench/mcp/: config.py  entrypoint.py  runtime.py  server.py
src/memory_workbench/static/: index.html
src/memory_workbench/static/assets/: index-C12-Lu3D.css  index-C8vVbBEZ.js  index-CHdMiYpY.css  index-D6og_srr.js  index-DAOJsKd_.js  index-DPwDw-F6.css
src/memory_workbench/storage/: db.py  repository.py  tables.py
tests/: test_agent_assets.py  test_api.py  test_endpoint_activity.py  test_endpoint_setup.py  test_mcp_config.py  test_mcp_contract.py  test_mcp_entrypoint.py  test_projection.py  test_scope.py  test_security.py  test_tracer.py
